# a-mem

./: .env.example  .gitignore  README.md  cleanup_collections.py  docker-compose.yml  llm_controller.py  pyproject.toml
.clinerules/: a-mem-dev.md  falkordb-py-guidelines.md
a_mem/: memory_system.py  test_memory_system.py
amem/: __init__.py  config.py  factory.py  llm_controller.py  memory_system.py  retrievers.py  test_memory_system.py
amem/embedding/: __init__.py  providers.py
amem/tests/: test_memories.py  test_memory_system.py
docs/: 01_qdrant_litellm_cohere_embedding.md  02_additional_features.md  TESTING.md
evals/: README.md  basic.py
utils/: README.md  cleanup_collections.py  verify_setup.py
