[project]
name = "amem"
version = "0.1.0"
description = "An agentic memory system for AI applications, providing semantic search and memory management capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.4.22",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.2.2",
    "nltk>=3.8.1",
    "transformers>=4.36.2",
    "litellm>=1.16.11",
    "numpy>=1.24.3",
    "scikit-learn>=1.3.2",
    "openai>=1.3.7"
]

[tool.setuptools]
packages = ["amem"]
